--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "ts-node": "^2.0.0",
+    "tslint": "^4.3.1",
     "typescript": "^2.1.4"
   },
   "main": "index.js",
@@ -28,7 +29,8 @@
     "compile": "installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc -p .",
     "watch": "cp -r node_modules ../client/server && installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc --watch -p .",
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register **/*.test.ts",
-    "clean": "rm -rf ../client/server"
+    "clean": "rm -rf ../client/server",
+    "lint": "tslint --project ."
   },
   "repository": {
     "type": "git",
