--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc -p .",
-    "watch": "cp -r node_modules ../client/server && installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc --watch -p .",
+    "watch": "npm run clean && mkdir -p ../client/server/node_modules && cp -r node_modules/ ../client/server/node_modules && installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc --watch -p .",
     "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register **/*.test.ts",
     "clean": "rm -rf ../client/server",
     "lint": "tslint --project ."
