--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
+    "@types/lodash": "^4.14.46",
     "@types/mocha": "^2.2.35",
     "@types/node": "^6.0.52",
     "chai": "^3.5.0",
