--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -14,6 +14,15 @@
         "../client/server/parser/**/*.test.js"
       ]
     },
+    {
+      "type": "node2",
+      "request": "launch",
+      "name": "Run Test Script",
+      "program": "${workspaceRoot}/../client/server/test.js",
+      "sourceMaps": true,
+			"outDir": "${workspaceRoot}/../client/server",
+      "cwd": "${workspaceRoot}/../client/server"
+    },
 		{
 			"name": "Attach",
 			"type": "node",
