Update client and server dependencies

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -27,9 +27,9 @@
 			"name": "Attach",
 			"type": "node",
 			"request": "attach",
-			"port": 6004,
+			"port": 6009,
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/../client/server"
+      "outFiles": [ "${workspaceRoot}/../client/server/**/*.js" ]
 		}
 	]
 }
