--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0",
   "publisher": "vscode",
   "engines": {
-    "vscode": "^1.4.0"
+    "vscode": "^1.8.0"
   },
   "categories": [
     "Other"
@@ -57,11 +57,12 @@
   "devDependencies": {
     "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.52",
-    "typescript": "^2.1.4",
-    "vscode": "^1.0.3"
+    "tslint": "~4.4.2",
+    "typescript": "2.1.6",
+    "vscode": "1.0.3"
   },
   "dependencies": {
-    "vscode-languageclient": "2.6.3"
+    "vscode-languageclient": "~3.0.3"
   },
   "repository": {
     "type": "git",
