--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "lodash": "4.17.4",
-    "vscode-languageserver": "2.6.2",
+    "vscode-languageserver": "3.0.4",
     "vscode-uri": "1.0.0"
   },
   "devDependencies": {
@@ -22,9 +22,9 @@
     "@types/node": "^6.0.52",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
-    "ts-node": "^2.0.0",
-    "tslint": "^4.3.1",
-    "typescript": "^2.1.4"
+    "ts-node": "~2.1.0",
+    "tslint": "~4.4.2",
+    "typescript": "2.1.6"
   },
   "main": "index.js",
   "scripts": {
