--- a/client/package.json
+++ b/client/package.json
@@ -56,7 +56,8 @@
     "vscode:prepublish": "tsc -p ./",
     "compile": "tsc -watch -p ./",
     "update-vscode": "node ./node_modules/vscode/bin/install",
-    "postinstall": "node ./node_modules/vscode/bin/install"
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "lint": "tslint --project ."
   },
   "devDependencies": {
     "@types/mocha": "^2.2.33",
