--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
     "node": "*"
   },
   "dependencies": {
+    "bluebird": "3.4.7",
     "lodash": "4.17.4",
     "vscode-languageserver": "3.0.4",
     "vscode-uri": "1.0.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.0.37",
     "@types/chai": "^3.4.34",
     "@types/lodash": "^4.14.46",
     "@types/mocha": "^2.2.35",
