Add report bug command

--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,10 @@
         {
             "command": "rfIntellisense.rebuildCurrentSource",
             "title": "RF Intellisense - Reindex the currently active robot file"
+        },
+        {
+          "command": "rfIntellisense.reportBug",
+          "title": "RF Intellisense - Report a bug"
         }
     ],
     "configuration": {
