Add TextMate grammar

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,13 @@
         "extensions": [".robot"],
         "aliases": ["robotframework", "RobotFramework"]
     }],
+    "grammars": [
+      {
+        "language": "robot",
+        "scopeName": "text.robot",
+        "path": "./syntaxes/robot.tmLanguage"
+      }
+    ],
     "commands": [
         {
             "command": "rfIntellisense.rebuildSources",
