--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "lodash": "4.17.4",
     "vscode-languageserver": "~3.1.0",
-    "vscode-uri": "1.0.0"
+    "vscode-uri": "1.0.0",
+    "minimatch": "~3.0.3"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.37",
