Exclude node_modules in debug config, as they break breakpoints

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -29,7 +29,12 @@
 			"request": "attach",
 			"port": 6009,
 			"sourceMaps": true,
-      "outFiles": [ "${workspaceRoot}/../client/server/**/*.js" ]
+      "outFiles": [
+        "${workspaceRoot}/../client/server/**/*.js",
+        "!${workspaceRoot}/../client/server/**/test/**",
+        "!${workspaceRoot}/../client/server/**/node_modules/**"
+      ],
+      "protocol": "legacy"
 		}
 	]
 }
