Add double quotes to auto closing pairs and different quotes to surrounding pairs

--- a/client/robot-language-configuration.json
+++ b/client/robot-language-configuration.json
@@ -10,11 +10,16 @@
    "autoClosingPairs": [
        { "open": "{", "close": "}" },
        { "open": "[", "close": "]" },
-       { "open": "(", "close": ")" }
+       { "open": "(", "close": ")" },
+       { "open": "\"", "close": "\"" }
    ],
    "surroundingPairs": [
        ["{", "}"],
        ["[", "]"],
-       ["(", ")"]
+       ["(", ")"],
+       ["<", ">"],
+       ["\"", "\""],
+       ["'", "'"],
+       ["`", "`"]
    ]
 }
