--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "lodash": "4.17.4",
+    "minimatch": "~3.0.3",
+    "node-ternary-search-trie": "git@github.com:tomi/node-ternary-search-trie.git",
     "vscode-languageserver": "~3.2.0",
-    "vscode-uri": "1.0.0",
-    "minimatch": "~3.0.3"
+    "vscode-uri": "1.0.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.37",
