--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,11 @@
     "vscode-uri": "1.0.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.0.37",
-    "@types/chai": "^3.4.34",
-    "@types/lodash": "^4.14.46",
-    "@types/mocha": "^2.2.35",
-    "@types/node": "^6.0.52",
+    "@types/bluebird": "3.0.37",
+    "@types/chai": "3.4.34",
+    "@types/lodash": "4.14.46",
+    "@types/mocha": "2.2.35",
+    "@types/node": "6.0.52",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "ts-node": "~2.1.0",
