Add 'rfLanguageServer.trace.server' configuration option

--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,16 @@
           "type": "array",
           "default": [],
           "description": "An array of files/folders that should be ignored by the parser. Glob patterns are accepted (eg. **/*bad.robot)"
+        },
+        "rfLanguageServer.trace.server": {
+          "type": "string",
+          "enum": [
+            "off",
+            "messages",
+            "verbose"
+          ],
+          "default": "off",
+          "description": "Traces the communication between VSCode and the rfLanguageServer service."
         }
       }
     }
