--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,11 @@
           "default": [],
           "description": "An array of files/folders that should be ignored by the parser. Glob patterns are accepted (eg. **/*bad.robot)"
         },
+        "rfLanguageServer.pythonKeywords": {
+          "type": "boolean",
+          "default": false,
+          "description": "Should python files in the project be parsed for keywords"
+        },
         "rfLanguageServer.logLevel": {
           "type": "string",
           "enum": [
