Improve the completion provider

--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "vsicons.presets.angular": false
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
+        "**/*.js.map": true,
+        "**/*.js": true
+    }
 }
