--- a/client/.vscode/launch.json
+++ b/client/.vscode/launch.json
@@ -1,6 +1,6 @@
 // A launch configuration that compiles the extension and then opens it inside a new window
 {
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"configurations": [
 		{
 			"name": "Launch Extension",
@@ -10,8 +10,9 @@
 			"args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
 			"stopOnEntry": false,
 			"sourceMaps": true,
-			"outFiles": [ "${workspaceRoot}/out/src/**/*.js" ],
-			"preLaunchTask": "npm"
+			"outFiles": [
+				"${workspaceRoot}/out/src/**/*.js"
+			]
 		},
 		{
 			"name": "Launch Tests",
