--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -4,8 +4,8 @@
 		"out": false // set this to true to hide the "out" folder with the compiled JS files
 	},
 	"search.exclude": {
-		"out": true // set this to false to include "out" folder in search results
+		"out": true, // set this to false to include "out" folder in search results
+		"server": true
 	},
-    "typescript.tsdk": "./node_modules/typescript/lib",
-    "vsicons.presets.angular": false // we want to use the TS server from our node_modules folder to control its version
+    "typescript.tsdk": "./node_modules/typescript/lib"
 }
