--- a/client/package.json
+++ b/client/package.json
@@ -97,11 +97,12 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "tsc -p ./",
     "compile": "tsc -watch -p ./",
-    "update-vscode": "node ./node_modules/vscode/bin/install",
+    "lint": "tslint --project .",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "lint": "tslint --project ."
+    "test": "echo no tests",
+    "update-vscode": "node ./node_modules/vscode/bin/install",
+    "vscode:prepublish": "tsc -p ./"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.33",
