--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "version": "2.0.1",
   "license": "MIT",
   "publisher": "TomiTurtiainen",
+  "icon": "icon.png",
   "engines": {
     "vscode": "^1.8.0"
   },
