--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/tomi/vscode-rf-language-server/issues"
   },
-  "homepage": "https://github.com/tomi/vscode-rf-language-server#readme"
+  "homepage": "https://github.com/tomi/vscode-rf-language-server#readme",
+  "contributors": [
+    "Tomi Turtiainen <tomi.turtiainen@gmail.com>"
+  ]
 }
