--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,10 @@
   "publisher": "TomiTurtiainen",
   "icon": "icon.png",
   "engines": {
-    "vscode": "^1.8.0"
+    "vscode": "^1.26.0"
   },
   "categories": [
-    "Languages",
+    "Programming Languages",
     "Other"
   ],
   "activationEvents": [
@@ -106,14 +106,13 @@
     "vscode:prepublish": "tsc -p ./"
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.33",
-    "@types/node": "^6.0.52",
-    "tslint": "~4.5.1",
-    "typescript": "2.1.6",
-    "vscode": "1.1.0"
+    "@types/node": "8.9.5",
+    "tslint": "~5.11.0",
+    "typescript": "3.1.3",
+    "vscode": "1.1.21"
   },
   "dependencies": {
-    "vscode-languageclient": "~3.2.0"
+    "vscode-languageclient": "~5.1.1"
   },
   "repository": {
     "type": "git",
