--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,11 +1,12 @@
 {
 	"compilerOptions": {
-		"target": "es6",
+		"lib": [ "es2016" ],
 		"module": "commonjs",
 		"moduleResolution": "node",
+		"noUnusedLocals": true,
 		"outDir": "out",
-		"lib": [ "es2016" ],
-		"sourceMap": true
+		"sourceMap": true,
+		"target": "es6"
 	},
 	"exclude": [
 		"node_modules",
