--- a/server/package.json
+++ b/server/package.json
@@ -11,23 +11,22 @@
     "node": "*"
   },
   "dependencies": {
-    "lodash": "4.17.4",
+    "lodash": "4.17.11",
     "minimatch": "~3.0.3",
     "node-ternary-search-trie": "https://github.com/tomi/node-ternary-search-trie.git",
-    "vscode-languageserver": "~3.2.0",
-    "vscode-uri": "1.0.0"
+    "vscode-languageserver": "~5.1.0",
+    "vscode-uri": "1.0.6"
   },
   "devDependencies": {
-    "@types/bluebird": "3.0.37",
-    "@types/chai": "3.4.34",
-    "@types/lodash": "4.14.46",
-    "@types/mocha": "2.2.35",
-    "@types/node": "6.0.52",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "ts-node": "~2.1.0",
-    "tslint": "~4.5.1",
-    "typescript": "2.1.6"
+    "@types/chai": "4.1.6",
+    "@types/lodash": "4.14.117",
+    "@types/mocha": "5.2.5",
+    "@types/node": "8.9.5",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "3.1.3"
   },
   "main": "index.js",
   "scripts": {
@@ -35,7 +34,7 @@
     "clean": "rm -rf ../client/server",
     "compile": "installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc -p .",
     "lint": "tslint --project .",
-    "test": "mocha --compilers ts:ts-node/register,tsx:ts-node/register **/*.test.ts",
+    "test": "mocha --require ts-node/register src/**/*.test.ts",
     "watch": "npm run clean && installServerIntoExtension ../client ./package.json ./tsconfig.json && tsc --watch -p ."
   },
   "repository": {
