--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,12 @@
 {
 	"compilerOptions": {
-		"target": "es6",
+		"lib" : [ "es2016" ],
 		"module": "commonjs",
 		"moduleResolution": "node",
+		"noUnusedLocals": true,
+		"outDir": "../client/server",
 		"sourceMap": true,
-		"lib" : [ "es2016" ],
-		"outDir": "../client/server"
+		"target": "es6"
 	},
 	"exclude": [
 		"node_modules"
