--- a/client/package.json
+++ b/client/package.json
@@ -199,14 +199,17 @@
   },
   "scripts": {
     "compile": "tsc -watch -p ./",
-    "lint": "tslint --project .",
+    "lint": "npm run tslint && npm run prettier",
+    "prettier": "prettier -l 'src/**'",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "echo no tests",
+    "tslint": "tslint --project . --config ../tslint.json",
     "update-vscode": "node ./node_modules/vscode/bin/install",
     "vscode:prepublish": "tsc -p ./"
   },
   "devDependencies": {
     "@types/node": "8.9.5",
+    "prettier": "1.14.3",
     "tslint": "~5.11.0",
     "typescript": "3.1.3",
     "vscode": "1.1.21"
