--- a/library-docs/package.json
+++ b/library-docs/package.json
@@ -14,18 +14,22 @@
     "cheerio": "^1.0.0-rc.2",
     "node-fetch": "^2.2.0",
     "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
     "turndown": "^5.0.1",
     "typescript": "3.1.3"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.9",
     "@types/node": "8.9.5",
-    "@types/node-fetch": "^2.1.2"
+    "@types/node-fetch": "^2.1.2",
+    "prettier": "1.14.3",
+    "tslint": "^5.11.0"
   },
   "main": "index.js",
   "scripts": {
-    "fetch": "ts-node fetch-library-documentation"
+    "fetch": "ts-node src/fetch-library-documentation",
+    "lint": "npm run tslint && npm run prettier",
+    "prettier": "prettier -l 'src/**'",
+    "tslint": "tslint --project . --config ../tslint.json"
   },
   "repository": {
     "type": "git",
