--- a/client/package.json
+++ b/client/package.json
@@ -205,7 +205,8 @@
     "test": "echo no tests",
     "tslint": "tslint --project . --config ../tslint.json",
     "update-vscode": "node ./node_modules/vscode/bin/install",
-    "vscode:prepublish": "tsc -p ./"
+    "vscode:prepublish": "tsc -p ./",
+    "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
     "@types/node": "8.9.5",
