--- a/client/package.json
+++ b/client/package.json
@@ -211,8 +211,8 @@
   "devDependencies": {
     "@types/node": "8.9.5",
     "prettier": "1.14.3",
-    "tslint": "~5.11.0",
-    "typescript": "3.1.3",
+    "tslint": "5.13.1",
+    "typescript": "3.3.3333",
     "vscode": "1.1.21"
   },
   "dependencies": {
