Enable stricter type checks

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,17 @@
 {
 	"compilerOptions": {
+		"allowUnreachableCode": false,
 		"lib" : [ "es2016" ],
 		"module": "commonjs",
 		"moduleResolution": "node",
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitThis": true,
+		"noImplicitUseStrict": true,
 		"noUnusedLocals": true,
 		"outDir": "../client/server",
 		"sourceMap": true,
+		"strictBindCallApply": true,
+		"strictFunctionTypes": true,
 		"target": "es6"
 	},
 	"include": [
