--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,6 +7,7 @@
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitThis": true,
 		"noImplicitUseStrict": true,
+		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"outDir": "../client/server",
 		"sourceMap": true,
