Enable noImplicitAny type check

--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "vscode-uri": "1.0.6"
   },
   "devDependencies": {
+    "@types/minimatch": "3.0.3",
     "@types/chai": "4.1.7",
     "@types/lodash": "4.14.121",
     "@types/mocha": "5.2.6",
