Add support for .resource files

--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
       {
         "id": "robot",
         "extensions": [
-          ".robot"
+          ".robot",
+          ".resource"
         ],
         "aliases": [
           "Robot Framework",
