fix error prettier -l 'src/**'

--- a/client/package.json
+++ b/client/package.json
@@ -93,42 +93,53 @@
                   "BuiltIn-2.8.7",
                   "BuiltIn-2.9.2",
                   "BuiltIn-3.0.4",
+                  "BuiltIn-3.1.1",
                   "Collections-2.7.7",
                   "Collections-2.8.7",
                   "Collections-2.9.2",
                   "Collections-3.0.4",
+                  "Collections-3.1.1",
                   "DateTime-2.8.7",
                   "DateTime-2.9.2",
                   "DateTime-3.0.4",
+                  "DateTime-3.1.1",
                   "Dialogs-2.7.7",
                   "Dialogs-2.8.7",
                   "Dialogs-2.9.2",
                   "Dialogs-3.0.4",
+                  "Dialogs-3.1.1",
                   "OperatingSystem-2.7.7",
                   "OperatingSystem-2.8.7",
                   "OperatingSystem-2.9.2",
                   "OperatingSystem-3.0.4",
+                  "OperatingSystem-3.1.1",
                   "Process-2.8.7",
                   "Process-2.9.2",
                   "Process-3.0.4",
+                  "Process-3.1.1",
                   "Screenshot-2.7.7",
                   "Screenshot-2.8.7",
                   "Screenshot-2.9.2",
                   "Screenshot-3.0.4",
+                  "Screenshot-3.1.1",
                   "Selenium2Library-1.8.0",
                   "Selenium2Library-3.0.0",
                   "SeleniumLibrary-3.2.0",
+                  "SeleniumLibrary-3.3.1",
                   "String-2.7.7",
                   "String-2.8.7",
                   "String-2.9.2",
                   "String-3.0.4",
+                  "String-3.1.1",
                   "Telnet-2.7.7",
                   "Telnet-2.8.7",
                   "Telnet-2.9.2",
                   "Telnet-3.0.4",
+                  "Telnet-3.1.1",
                   "XML-2.8.7",
                   "XML-2.9.2",
-                  "XML-3.0.4"
+                  "XML-3.0.4",
+                  "XML-3.1.1"
                 ]
               },
               {
@@ -201,7 +212,7 @@
   "scripts": {
     "compile": "tsc -watch -p ./",
     "lint": "npm run tslint && npm run prettier",
-    "prettier": "prettier -l 'src/**'",
+    "prettier": "prettier -l src/**",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "echo no tests",
     "tslint": "tslint --project . --config ../tslint.json",
