--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/tomi/vscode-rf-language-server.git"
+    "url": "https://github.com/tomi/vscode-rf-language-server.git"
   },
   "author": "Tomi Turtiainen <tomi.turtiainen@gmail.com>",
   "bugs": {
