Updated Library Documentation to RF 3.1.2 Release and Selenium to 4.2.0 Release. Added some additional Libraries.

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "rf-intellisense",
   "displayName": "Robot Framework Intellisense",
   "description": "Robot Framework Intellisense",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "license": "MIT",
   "publisher": "TomiTurtiainen",
   "icon": "icon.png",
@@ -89,57 +89,83 @@
               {
                 "type": "string",
                 "enum": [
+                  "AppiumLibrary-1.5.0.3",
                   "BuiltIn-2.7.7",
                   "BuiltIn-2.8.7",
                   "BuiltIn-2.9.2",
                   "BuiltIn-3.0.4",
+                  "BuiltIn-3.1",
                   "BuiltIn-3.1.1",
+                  "BuiltIn-3.1.2",
                   "Collections-2.7.7",
                   "Collections-2.8.7",
                   "Collections-2.9.2",
                   "Collections-3.0.4",
+                  "Collections-3.1",
                   "Collections-3.1.1",
+                  "Collections-3.1.2",
                   "DateTime-2.8.7",
                   "DateTime-2.9.2",
                   "DateTime-3.0.4",
+                  "DateTime-3.1",
                   "DateTime-3.1.1",
+                  "DateTime-3.1.2",
                   "Dialogs-2.7.7",
                   "Dialogs-2.8.7",
                   "Dialogs-2.9.2",
                   "Dialogs-3.0.4",
+                  "Dialogs-3.1",
                   "Dialogs-3.1.1",
+                  "Dialogs-3.1.2",
+                  "FakerLibrary-",
                   "OperatingSystem-2.7.7",
                   "OperatingSystem-2.8.7",
                   "OperatingSystem-2.9.2",
                   "OperatingSystem-3.0.4",
+                  "OperatingSystem-3.1",
                   "OperatingSystem-3.1.1",
+                  "OperatingSystem-3.1.2",
                   "Process-2.8.7",
                   "Process-2.9.2",
                   "Process-3.0.4",
+                  "Process-3.1",
                   "Process-3.1.1",
+                  "Process-3.1.2",
                   "Screenshot-2.7.7",
                   "Screenshot-2.8.7",
                   "Screenshot-2.9.2",
                   "Screenshot-3.0.4",
+                  "Screenshot-3.1",
                   "Screenshot-3.1.1",
+                  "Screenshot-3.1.2",
                   "Selenium2Library-1.8.0",
                   "Selenium2Library-3.0.0",
                   "SeleniumLibrary-3.2.0",
                   "SeleniumLibrary-3.3.1",
+                  "SeleniumLibrary-4.2.0",
+                  "SSHLibrary-3.4.0",
                   "String-2.7.7",
                   "String-2.8.7",
                   "String-2.9.2",
                   "String-3.0.4",
+                  "String-3.1",
                   "String-3.1.1",
+                  "String-3.1.2",
+                  "SwingLibrary-1.9.9",
                   "Telnet-2.7.7",
                   "Telnet-2.8.7",
                   "Telnet-2.9.2",
                   "Telnet-3.0.4",
+                  "Telnet-3.1",
                   "Telnet-3.1.1",
+                  "Telnet-3.1.2",
+                  "WhiteLibrary-1.6.0",
                   "XML-2.8.7",
                   "XML-2.9.2",
                   "XML-3.0.4",
-                  "XML-3.1.1"
+                  "XML-3.1",
+                  "XML-3.1.1",
+                  "XML-3.1.2"
                 ]
               },
               {
