Updated more Libraries #78 Changed 2 Spaces to 4 Spaces in Code Completion #76

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "rf-intellisense",
   "displayName": "Robot Framework Intellisense",
   "description": "Robot Framework Intellisense",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "license": "MIT",
   "publisher": "TomiTurtiainen",
   "icon": "icon.png",
@@ -89,7 +89,7 @@
               {
                 "type": "string",
                 "enum": [
-                  "AppiumLibrary-1.5.0.3",
+                  "AppiumLibrary-1.5.0.4",
                   "BuiltIn-2.7.7",
                   "BuiltIn-2.8.7",
                   "BuiltIn-2.9.2",
@@ -118,6 +118,7 @@
                   "Dialogs-3.1.1",
                   "Dialogs-3.1.2",
                   "FakerLibrary-",
+                  "JSONLibrary-",
                   "OperatingSystem-2.7.7",
                   "OperatingSystem-2.8.7",
                   "OperatingSystem-2.9.2",
@@ -131,6 +132,7 @@
                   "Process-3.1",
                   "Process-3.1.1",
                   "Process-3.1.2",
+                  "RequestsLibrary-",
                   "Screenshot-2.7.7",
                   "Screenshot-2.8.7",
                   "Screenshot-2.9.2",
@@ -140,9 +142,10 @@
                   "Screenshot-3.1.2",
                   "Selenium2Library-1.8.0",
                   "Selenium2Library-3.0.0",
+                  "SeleniumLibrary with SeleniumTestability Plugin-4.0.0",
                   "SeleniumLibrary-3.2.0",
                   "SeleniumLibrary-3.3.1",
-                  "SeleniumLibrary-4.2.0",
+                  "SeleniumLibrary-4.3.0",
                   "SSHLibrary-3.4.0",
                   "String-2.7.7",
                   "String-2.8.7",
