Improved Syntax Highlighting

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "rf-intellisense",
   "displayName": "Robot Framework Intellisense",
   "description": "Robot Framework Intellisense",
-  "version": "2.9.0",
+  "version": "2.9.1",
   "license": "MIT",
   "publisher": "TomiTurtiainen",
   "icon": "icon.png",
@@ -133,6 +133,8 @@
                   "Process-3.1.1",
                   "Process-3.1.2",
                   "RequestsLibrary-",
+                  "RequestsLibrary-0.6.5",
+                  "REST-",
                   "Screenshot-2.7.7",
                   "Screenshot-2.8.7",
                   "Screenshot-2.9.2",
@@ -143,6 +145,7 @@
                   "Selenium2Library-1.8.0",
                   "Selenium2Library-3.0.0",
                   "SeleniumLibrary with SeleniumTestability Plugin-4.0.0",
+                  "SeleniumLibrary with SeleniumTestability Plugin-4.3.0",
                   "SeleniumLibrary-3.2.0",
                   "SeleniumLibrary-3.3.1",
                   "SeleniumLibrary-4.3.0",
