Added DBLibrary to Libdocs

--- a/client/package.json
+++ b/client/package.json
@@ -104,6 +104,7 @@
                   "Collections-3.1",
                   "Collections-3.1.1",
                   "Collections-3.1.2",
+                  "DatabaseLibrary-",
                   "DateTime-2.8.7",
                   "DateTime-2.9.2",
                   "DateTime-3.0.4",
